syntax = "proto3";

package cosmos.tx.module.v1;

import "cosmos/app/v1alpha1/module.proto";

// Module is the config object of the tx module.
message Module {
  option (cosmos.app.v1alpha1.module) = {
    go_import: "github.com/cosmos/cosmos-sdk/x/auth/tx/module"
  };

  // skip_ante_handler defines whether the ante handler registration should be skipped in case an app wants to override
  // this functionality.
  bool skip_ante_handler = 1;

  // skip_post_handler defines whether the post handler registration should be skipped in case an app wants to override
  // this functionality.
  bool skip_post_handler = 2;
}